[package]
name = "chronicle-emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5", features = ["headers"] }
indoc = "1"
headers = "0.3"
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", features = [ "full" ] }
jsonwebtoken = { version = "8", features = [ "use_pem" ] }
percent-encoding = "2.1"
chrono = "0.4"
thiserror = "1"
serde_json = "1"
once_cell = "1"
clap = { version = "3.2", features = [ "derive" ] }
